<resources>
    <string name="app_name">actNOW</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="action_settings">Settings</string>
    <string name="title_activity_story">story</string>
    <string name="title_activity_splash">SplashActivity</string>
    <string name="title_activity_about">AboutActivity</string>
    <string name="title_activity_detail_story">DetailStoryActivity</string>
    <string name="tvDetailTitleString">title</string>
    <string name="storyAuthorString">author</string>
    <string name="share">share</string>
    <string name="action_signin">Sign up to actNOW</string>
    <string name="action_blog">blog</string>
    <string name="aboutUsStep1">actNOW is a platform for investigators and journalists to report their findings on corruption and human rights issues.</string>
    <string name="aboutUsStep2">In response to injustice, users can petition decision makers and share stories with friends.</string>
    <string name="swipeLeft">Our first documentary recently launched. Swipe left arrow to see our latest work.</string>
    <string name="swipeLeft2"> to see our latest work.</string>
    <string name="aboutUsMessage">What we do and why...</string>
    <string name="contentDescription">actNOW Image</string>
    <string name="petitionTitle">Title fashion axe freegan direct trade Neutra kitsch Ennui.</string>
    <string name="spell_of_albino_story"><![CDATA[Albinism is a non-contagious, genetically inherited disorder, affecting about 1 in 20,000 men and women around the world, regardless of ethnicity and geographical location. Sufferers are afflicted by a congenital absence of melanin, a pigmentation defect in the hair, skin and eyes that causes vulnerability to sun exposure and bright light. Many have very poor vision as a consequence and in tropical countries especially they can be vulnerable to skin cancers if unprotected from the sun.

What albinism is absolutely not, is an indication that the afflicted person is any way invested with magical powers.

Though it might seem absurdly obvious, the point is worth stating so starkly because in parts of sub-Saharan Africa especially, albinos have traditionally faced discrimination and prejudice - innocent victims of a still widespread belief that the condition is in some way associated with the supernatural. To some, a white-skinned African person is seen as a kind of phantom or ghost, who rather than die will dissolve or disappear with the wind and rain. As a result, in some communities, albinos have been feared, shunned and socially marginalised.

Over the last five years in Tanzania, however, the situation has become much, much worse, with albinos increasingly subjected to murder and mutilation because of a completely spurious myth that albino body parts are effective in witchcraft rituals. Despite international outrage and repeated attempts by the Tanzanian government to stamp out this truly appalling practice, since it first came to light many albinos have been hunted down and attacked purely for their limbs and organs. Indeed the incidents seem to be increasing. Since 2008, at least 62 albinos have been killed in Tanzania, 16 have been violently assaulted and had their limbs amputated and the bodies of 12 albinos have been exhumed from graves and dismembered.

Against this background, it is perhaps not surprising that estimates of the numbers of albinos in Tanzania vary significantly. Officially there are around 5,000 registered, but the country’s Albino Association says the real number is in excess of 150,000. They say that many albinos are still kept hidden by their families because of the stigma some associate with the condition or because of fear that they might be attacked.

In this remarkable episode of Africa Investigates, Tanzanian journalist Richard Mgamba, albino community representative Isaack Timothy and Ghanaian investigative journalist Anas Aremeyaw Anas set out to discover what lies behind these sickening attacks and to uncover and confront some of those behind the grotesque trade in body parts for witchcraft rituals.

In the process they meet two albino children, victims of vicious assaults that occurred in the weeks the film was being made. One of them is a 12-year-old boy who had part of his hand cut off, allegedly with the connivance of his father who is now in police custody and awaiting trial. The other is a 16-year-old girl whose left arm was hacked off by a stranger with a machete.

But Anas, who goes undercover in the guise of a businessman seeking to get rich, also comes face to face with a witchdoctor who tries to sell him a potion containing ground up albino body parts. Not surprisingly, when the offer is made, Anas makes his abhorrence very plain.

Right from the start of this film, viewers may find some of the images disturbing.]]></string>
    <string name="spirit_child_story"><![CDATA[Thousands of children have been killed in Ghana because the communities they are born into believe they are evil spirits.
				 When I first heard about this I could not believe it was happening in my country in the 21st century. 
				 The practice originally emerged as a way for poor families to deal with deformed or disabled children that they cannot look after.
				  These families approach village elders known as concoction men and inform them that they suspect their child to be a so-called spirit child. 
				 The concoction man then takes the father of the child to visit a soothsayer who confirms whether or not the child is truly evil, without ever actually laying eyes on them.  
				 Once this confirmation has been received, the concoction man brews a poisonous liquid from local roots and herbs and force-feeds it to the child, almost always resulting in death. 
				 Over time, this practice has become a perceived solution to any problems a family might be having at the time of a child\'s birth. 
				 By blaming the child for sickness in the family, or the father\'s inability to find work or provide money to support his dependents, 
				 these communities have found an otherworldly explanation for their problems. 
				 In this highly patriarchal society it enables heads of family to pass the blame for their struggles onto someone else. 
				 And by branding the child a spirit from outside the family, they can disassociate themselves and feel justified in murdering their own offspring, 
				 while telling those around them that now all will be well - the evil presence is gone.  But infanticide has always been a crime against humanity. 
				 I believe there is plenty of evidence of infanticide in the history of all human societies and its continued and widespread practice makes a mockery 
				 of the democratic credentials of the countries, including mine, where this crime still takes place. Many forms of civic engagement and advocacy have 
				 been used in a bid to eradicate this practice in Ghana and other West African nations. Sadly though, the limited efficacy of such techniques is 
				 illustrated by the fact that today children are still being killed in this way.  Ready to spill blood in the name of tradition.  
				 And sometimes a strong focus on understanding and education when dealing with traditional practices can distance us from the reality of a situation; 
				 it can place us in an ivory tower where we fail to engage with the true manner in which those involved are behaving. Far from acting like a 
				 man fulfilling a sad but necessary duty, the concoction man I hired to kill my fictitious child for the purposes of this film was excited; 
				 his eyes pinned wide with zeal as he went about preparing for the task at hand. He laughed and joked about his previous experience, telling me 
				 about how he had recently killed a 12-year-old girl by tricking her into drinking his concoction and boasting about how effective his methods are.
				  Without knowing the context, any casual observer would surely consider his disposition nothing short of murderous. While I understand that he 
				 was misguided - ready to spill innocent blood in the name of tradition - I also strongly believe that, no matter what the circumstances, 
				 where children are being murdered the state must step in to punish those responsible in the same way that the citizens of any developed democracy 
				 would expect it to. That is not to say that some understanding cannot be afforded to the concoction men and the communities that continue to 
				 practice these rituals. Unlike those with the benefit of technology who can see a badly developed fetus and terminate it before birth, the 
				 mothers whose babies are killed in northern Ghana have no such options. They may find themselves giving birth to a child only to discover 
				 that it is not normal: it will never be accepted and will always be a burden on those around it. In the absence of technology or a refuge 
				 for mother and child to escape to, the concoction man is the only solution. As a result, the parents perceive him as a saviour; the only 
				 one who can deliver them from enduring further hardship. And the concoction men in turn thrive on the standing and power this affords them 
				 in the community. When we think of slavery or the burning of alleged witches, these crimes against humanity were only eradicated when key actors 
				 in government decided to take a stand. By declaring these practices as unacceptable and threatening those who continue to perpetrate them
				  with prosecution, governments have brought about the abolition of centuries-old traditions in a relatively short space of time.  Permitting 
				 evil to triumph over good  From northern Ghana, where the spirit child story is set, through Burkina Faso, Benin and parts of Nigeria,
				  countless babies are killed based on age-old cultural beliefs. But despite this, we were unable to find any evidence of previous arrests 
				 for these crimes.  During the three weeks that I worked on this story, I came across 10 men who were willing to kill a baby for spiritual 
				 reasons. They were easy to find. Yet when I asked a senior police officer why no arrests have been made, his response was]]></string>
    <string name="petition_signed">Your petition will be e-mailed to President John Dramani Mahama’s Chief of Staff Prosper Bani</string>
    <string name="petition_signed_thanku">Thank You for acting NOW. Encourage your friends to do the same!</string>
    <string name="petition_signed_success">Success!</string>
    <string name="storyTitle1">Enemies of the Nation: The dark secrets of Tema Harbour</string>
    <string name="storySource1">Source: New Crusading Guide | February 2, 2011</string>
    <string name="storySource2">Source: edition.myjoyonline.com | August 17, 2009</string>
    <string name="storyTitle2">Chinese sex mafia busted</string>
    <string name="storyTitle3">Journalist Face-to-Face with Chinese Sex Mafia</string>
    <string name="storySource3">Source: ghanaweb.com | March 13, 2009</string>
    <string name="storySourceAnas">Source: Anas Aremeyaw Anas | April 2014</string>
    <string-array name="drawer_menu_array">
        <item>Sign In</item>
        <item>Documentary</item>
        <item>Feed</item>
        <item>About</item>
    </string-array>
    <string name="soulTakersTitle1">SOUL TAKERS UNMASKED [1]</string>
    <string name="soulTakersTitle2">SOUL TAKERS UNMASKED [2]</string>
    <string name="soulTakersTitle3">SOUL TAKERS UNMASKED [3]</string>
    <string name="soulTakersTitle4">SOUL TAKERS [4]</string>
    <string name="soulTakersTitle5">SOUL TAKERS [5]</string>
</resources>